[gd_scene load_steps=61 format=2]

[ext_resource path="res://assets/bg/sky_turquoise.svg" type="Texture" id=1]
[ext_resource path="res://assets/meta/logo.png" type="Texture" id=2]
[ext_resource path="res://assets/interface/button_play.png" type="Texture" id=3]
[ext_resource path="res://assets/interface/button_play_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/interface/num_buttons/button_1_press.png" type="Texture" id=5]
[ext_resource path="res://assets/interface/num_buttons/button_1.png" type="Texture" id=6]
[ext_resource path="res://assets/interface/num_buttons/button_2_press.png" type="Texture" id=7]
[ext_resource path="res://assets/interface/num_buttons/button_2.png" type="Texture" id=8]
[ext_resource path="res://scenes/LevelMenu.gd" type="Script" id=9]
[ext_resource path="res://assets/meta/level_select.png" type="Texture" id=10]
[ext_resource path="res://assets/interface/num_buttons/button_3_press.png" type="Texture" id=11]
[ext_resource path="res://assets/interface/num_buttons/button_4.png" type="Texture" id=12]
[ext_resource path="res://assets/interface/num_buttons/button_5_press.png" type="Texture" id=13]
[ext_resource path="res://assets/interface/num_buttons/button_3.png" type="Texture" id=14]
[ext_resource path="res://assets/interface/num_buttons/button_4_press.png" type="Texture" id=15]
[ext_resource path="res://assets/interface/num_buttons/button_5.png" type="Texture" id=16]
[ext_resource path="res://assets/interface/num_buttons/button_6.png" type="Texture" id=17]
[ext_resource path="res://assets/interface/num_buttons/button_7.png" type="Texture" id=18]
[ext_resource path="res://assets/interface/num_buttons/button_6_press.png" type="Texture" id=19]
[ext_resource path="res://assets/interface/num_buttons/button_9.png" type="Texture" id=20]
[ext_resource path="res://assets/interface/num_buttons/button_7_press.png" type="Texture" id=21]
[ext_resource path="res://assets/interface/num_buttons/button_10.png" type="Texture" id=22]
[ext_resource path="res://assets/interface/num_buttons/button_10_press.png" type="Texture" id=23]
[ext_resource path="res://assets/interface/num_buttons/button_8_press.png" type="Texture" id=24]
[ext_resource path="res://assets/interface/num_buttons/button_9_press.png" type="Texture" id=25]
[ext_resource path="res://assets/interface/num_buttons/button_8.png" type="Texture" id=26]
[ext_resource path="res://assets/interface/arrow_press.png" type="Texture" id=27]
[ext_resource path="res://assets/interface/arrow.png" type="Texture" id=28]
[ext_resource path="res://assets/audio/click.ogg" type="AudioStream" id=29]
[ext_resource path="res://assets/music/Menu.mp3" type="AudioStream" id=30]
[ext_resource path="res://scenes/interface/Options.tscn" type="PackedScene" id=31]
[ext_resource path="res://assets/interface/font/Cantarell-Bold.ttf" type="DynamicFontData" id=32]
[ext_resource path="res://assets/interface/font/Cantarell-BoldItalic.ttf" type="DynamicFontData" id=33]
[ext_resource path="res://assets/interface/num_buttons/button_12.png" type="Texture" id=34]
[ext_resource path="res://assets/interface/num_buttons/button_11.png" type="Texture" id=35]
[ext_resource path="res://assets/interface/num_buttons/button_11_press.png" type="Texture" id=36]
[ext_resource path="res://assets/interface/num_buttons/button_12_press.png" type="Texture" id=37]
[ext_resource path="res://assets/interface/num_buttons/button_13.png" type="Texture" id=38]
[ext_resource path="res://assets/interface/num_buttons/button_14_press.png" type="Texture" id=39]
[ext_resource path="res://assets/interface/num_buttons/button_15_press.png" type="Texture" id=40]
[ext_resource path="res://assets/interface/num_buttons/button_14.png" type="Texture" id=41]
[ext_resource path="res://assets/interface/num_buttons/button_15.png" type="Texture" id=42]
[ext_resource path="res://assets/interface/num_buttons/button_13_press.png" type="Texture" id=43]
[ext_resource path="res://assets/interface/num_buttons/button_16.png" type="Texture" id=44]
[ext_resource path="res://assets/interface/num_buttons/button_20_press.png" type="Texture" id=45]
[ext_resource path="res://assets/interface/num_buttons/button_19.png" type="Texture" id=46]
[ext_resource path="res://assets/interface/num_buttons/button_17.png" type="Texture" id=47]
[ext_resource path="res://assets/interface/num_buttons/button_18_press.png" type="Texture" id=48]
[ext_resource path="res://assets/interface/num_buttons/button_20.png" type="Texture" id=49]
[ext_resource path="res://assets/interface/num_buttons/button_18.png" type="Texture" id=50]
[ext_resource path="res://assets/interface/num_buttons/button_19_press.png" type="Texture" id=51]
[ext_resource path="res://assets/interface/num_buttons/button_16_press.png" type="Texture" id=52]
[ext_resource path="res://assets/interface/num_buttons/button_17_press.png" type="Texture" id=53]
[ext_resource path="res://assets/meta/finish_title.png" type="Texture" id=54]
[ext_resource path="res://assets/interface/arrow.svg" type="Texture" id=55]
[ext_resource path="res://assets/interface/arrow_press.svg" type="Texture" id=56]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 32 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 33 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 32 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 32 )

[node name="LevelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -840.0
margin_top = -360.0
margin_right = 840.0
margin_bottom = 360.0
texture = ExtResource( 1 )
flip_v = true

[node name="TitleScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = 0.0512205

[node name="Logo" type="TextureRect" parent="TitleScreen"]
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.35
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="PlayButton" type="TextureButton" parent="TitleScreen"]
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.75
anchor_bottom = 0.9
rect_rotation = -2.5
rect_pivot_offset = Vector2( 320, 144 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="LevelSelect" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 720.0
margin_bottom = 720.0
rect_rotation = -0.0474102

[node name="LevelSelectTitle" type="TextureRect" parent="LevelSelect"]
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.3
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="Set1" type="Control" parent="LevelSelect"]
anchor_left = 0.05
anchor_right = 0.95
anchor_bottom = 1.0

[node name="SetTitle" type="Label" parent="LevelSelect/Set1"]
anchor_left = 0.1
anchor_top = 0.4
anchor_right = 0.9
anchor_bottom = 0.45
margin_left = 2.28882e-05
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
text = "The Grasslands"
align = 1
valign = 1

[node name="Level1" type="TextureButton" parent="LevelSelect/Set1"]
anchor_top = 0.5
anchor_right = 0.2
anchor_bottom = 0.75
margin_top = 0.000183105
margin_bottom = 0.000183105
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Level2" type="TextureButton" parent="LevelSelect/Set1"]
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.4
anchor_bottom = 0.75
margin_left = 6.10352e-05
margin_top = 6.10352e-05
margin_bottom = 6.10352e-05
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="Level3" type="TextureButton" parent="LevelSelect/Set1"]
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 0.75
margin_left = 0.00012207
margin_top = 0.000183105
margin_right = 0.00012207
margin_bottom = 0.000183105
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="Level4" type="TextureButton" parent="LevelSelect/Set1"]
anchor_left = 0.6
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 0.75
margin_left = 0.000183105
margin_top = 0.000183105
margin_right = 0.000244141
margin_bottom = 0.000183105
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 15 )
expand = true
stretch_mode = 5

[node name="Level5" type="TextureButton" parent="LevelSelect/Set1"]
anchor_left = 0.8
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.75
margin_left = 0.000244141
margin_top = 6.10352e-05
margin_right = 0.000244141
margin_bottom = 6.10352e-05
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="Set2" type="Control" parent="LevelSelect"]
anchor_left = 0.05
anchor_right = 0.95
anchor_bottom = 1.0
margin_left = 1280.0
margin_right = 1280.0

[node name="SetTitle" type="Label" parent="LevelSelect/Set2"]
anchor_left = 0.1
anchor_top = 0.4
anchor_right = 0.9
anchor_bottom = 0.45
margin_left = 6.86646e-05
margin_top = 6.10352e-05
margin_right = 0.00012207
margin_bottom = 13.0001
custom_fonts/font = SubResource( 1 )
text = "The Dark Castle"
align = 1
valign = 1

[node name="Level6" type="TextureButton" parent="LevelSelect/Set2"]
anchor_top = 0.5
anchor_right = 0.2
anchor_bottom = 0.75
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 19 )
expand = true
stretch_mode = 5

[node name="Level7" type="TextureButton" parent="LevelSelect/Set2"]
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.4
anchor_bottom = 0.75
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 21 )
expand = true
stretch_mode = 5

[node name="Level8" type="TextureButton" parent="LevelSelect/Set2"]
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 0.75
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 24 )
expand = true
stretch_mode = 5

[node name="Level9" type="TextureButton" parent="LevelSelect/Set2"]
anchor_left = 0.6
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 0.75
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 25 )
expand = true
stretch_mode = 5

[node name="Level10" type="TextureButton" parent="LevelSelect/Set2"]
anchor_left = 0.8
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.75
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 23 )
expand = true
stretch_mode = 5

[node name="Set3" type="Control" parent="LevelSelect"]
anchor_left = 0.05
anchor_right = 0.95
anchor_bottom = 1.0
margin_left = 2560.0
margin_right = 2560.0

[node name="SetTitle" type="Label" parent="LevelSelect/Set3"]
anchor_left = 0.1
anchor_top = 0.4
anchor_right = 0.9
anchor_bottom = 0.45
margin_left = 6.86646e-05
margin_top = 6.10352e-05
margin_right = 0.00012207
margin_bottom = 13.0001
custom_fonts/font = SubResource( 1 )
text = "The City"
align = 1
valign = 1

[node name="Level11" type="TextureButton" parent="LevelSelect/Set3"]
anchor_top = 0.5
anchor_right = 0.2
anchor_bottom = 0.75
texture_normal = ExtResource( 35 )
texture_pressed = ExtResource( 36 )
expand = true
stretch_mode = 5

[node name="Level12" type="TextureButton" parent="LevelSelect/Set3"]
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.4
anchor_bottom = 0.75
texture_normal = ExtResource( 34 )
texture_pressed = ExtResource( 37 )
expand = true
stretch_mode = 5

[node name="Level13" type="TextureButton" parent="LevelSelect/Set3"]
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 0.75
texture_normal = ExtResource( 38 )
texture_pressed = ExtResource( 43 )
expand = true
stretch_mode = 5

[node name="Level14" type="TextureButton" parent="LevelSelect/Set3"]
anchor_left = 0.6
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 0.75
texture_normal = ExtResource( 41 )
texture_pressed = ExtResource( 39 )
expand = true
stretch_mode = 5

[node name="Level15" type="TextureButton" parent="LevelSelect/Set3"]
anchor_left = 0.8
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.75
texture_normal = ExtResource( 42 )
texture_pressed = ExtResource( 40 )
expand = true
stretch_mode = 5

[node name="Set4" type="Control" parent="LevelSelect"]
anchor_left = 0.05
anchor_right = 0.95
anchor_bottom = 1.0
margin_left = 3840.0
margin_right = 3840.0

[node name="SetTitle" type="Label" parent="LevelSelect/Set4"]
anchor_left = 0.1
anchor_top = 0.4
anchor_right = 0.9
anchor_bottom = 0.45
margin_left = 6.86646e-05
margin_top = 6.10352e-05
margin_right = 0.00012207
margin_bottom = 13.0001
custom_fonts/font = SubResource( 1 )
text = "The Volcano"
align = 1
valign = 1

[node name="Level16" type="TextureButton" parent="LevelSelect/Set4"]
anchor_top = 0.5
anchor_right = 0.2
anchor_bottom = 0.75
texture_normal = ExtResource( 44 )
texture_pressed = ExtResource( 52 )
expand = true
stretch_mode = 5

[node name="Level17" type="TextureButton" parent="LevelSelect/Set4"]
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.4
anchor_bottom = 0.75
texture_normal = ExtResource( 47 )
texture_pressed = ExtResource( 53 )
expand = true
stretch_mode = 5

[node name="Level18" type="TextureButton" parent="LevelSelect/Set4"]
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 0.75
texture_normal = ExtResource( 50 )
texture_pressed = ExtResource( 48 )
expand = true
stretch_mode = 5

[node name="Level19" type="TextureButton" parent="LevelSelect/Set4"]
anchor_left = 0.6
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 0.75
texture_normal = ExtResource( 46 )
texture_pressed = ExtResource( 51 )
expand = true
stretch_mode = 5

[node name="Level20" type="TextureButton" parent="LevelSelect/Set4"]
anchor_left = 0.8
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.75
texture_normal = ExtResource( 49 )
texture_pressed = ExtResource( 45 )
expand = true
stretch_mode = 5

[node name="NewLevelIndicator" type="RichTextLabel" parent="LevelSelect"]
visible = false
anchor_left = 0.65
anchor_top = 0.85
anchor_right = 0.975
anchor_bottom = 0.95
margin_top = -6.10352e-05
margin_bottom = -6.10352e-05
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "You've Just unlocked some [i]new levels[/i]
check them out"
text = "You've Just unlocked some new levels
check them out"

[node name="NextSet" type="TextureButton" parent="LevelSelect"]
visible = false
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.65
anchor_bottom = 0.95
margin_top = 6.10352e-05
margin_bottom = 6.10352e-05
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 27 )
expand = true
stretch_mode = 5

[node name="PrevSet" type="TextureButton" parent="LevelSelect"]
visible = false
anchor_left = 0.35
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.95
margin_left = 6.10352e-05
margin_top = 6.10352e-05
margin_bottom = 6.10352e-05
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 27 )
expand = true
stretch_mode = 5
flip_h = true

[node name="Options" parent="LevelSelect" instance=ExtResource( 31 )]

[node name="GameCompletionScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -720.0
margin_bottom = -720.0

[node name="CompletionMessage" type="Label" parent="GameCompletionScreen"]
anchor_left = 0.1
anchor_top = 0.3
anchor_right = 0.9
anchor_bottom = 0.8
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "You've beaten the game!

This is quite the achievement. Now that you've beaten the game, feel free to try to get the best time in each level. You can see your sum of best in the options.

Thanks for playing!"
align = 1
autowrap = true

[node name="CompletionTitle" type="TextureRect" parent="GameCompletionScreen"]
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.25
texture = ExtResource( 54 )
expand = true
stretch_mode = 6

[node name="CompletionProceed" type="TextureButton" parent="GameCompletionScreen"]
anchor_left = 0.45
anchor_top = 0.625
anchor_right = 0.55
anchor_bottom = 1.125
rect_rotation = 90.0
rect_pivot_offset = Vector2( 64, 180 )
texture_normal = ExtResource( 55 )
texture_pressed = ExtResource( 56 )
expand = true
stretch_mode = 5

[node name="Tween" type="Tween" parent="."]

[node name="ButtonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 30 )
volume_db = -10.0

[connection signal="pressed" from="TitleScreen/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="LevelSelect/NextSet" to="." method="_on_NextSet_pressed"]
[connection signal="pressed" from="LevelSelect/PrevSet" to="." method="_on_PrevSet_pressed"]
[connection signal="pressed" from="GameCompletionScreen/CompletionProceed" to="." method="_on_CompletionProceed_pressed"]
